[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/power-ups/power-up.png" type="Texture" id=1]
[ext_resource path="res://src/power-ups/scripts/PowerUp.gd" type="Script" id=2]
[ext_resource path="res://assets/art/effects/explosion.png" type="Texture" id=3]




[sub_resource type="Animation" id=3]
resource_name = "collect"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 19.7475

[node name="PowerUp" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
vframes = 2
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/collect = SubResource( 3 )
anims/default = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0313726, 0.164706, 0.454902, 1 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
hframes = 5
frame = 4
[connection signal="body_entered" from="." to="." method="_on_PowerUp_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
